updated the t-test results

--- a/notebooks/1b_transfer_learning_hardness.ipynb
+++ b/notebooks/1b_transfer_learning_hardness.ipynb
@@ -107,7 +107,7 @@
     "fig, ax  = plt.subplots(1,3, sharey=True, sharex = False, figsize = (15,5))\n",
     "ax = ax.ravel()\n",
     "variance_levels = [0.90,0.95,0.99]\n",
-    "var_dict = {}\n",
+    "var_dict, pca_dict = {},{}\n",
     "for j,v in enumerate(variance_levels):\n",
     "    component_dict_var = {}\n",
     "    for i, method in enumerate(methods):\n",
@@ -133,14 +133,16 @@
     "        #ax[j].text(16, 0.8, f'{v*100}% cut-off', color = 'grey', fontsize=10)\n",
     "        ax[j].set_title(f'{v*100}% variance',y=1)\n",
     "        component_dict_var[method] = ind\n",
-    "        #pca_dict[method] = pca.explained_variance_ratio_.tolist()\n",
+    "        pca_dict[method] = pca.explained_variance_ratio_.tolist()\n",
     "    var_dict[v] = component_dict_var\n",
     "#fig.text(0.5, -0.04, 'number of components', ha='center', fontsize=14)\n",
     "#fig.text(-0.04, 0.5, 'cumulative explained variance', va='center', rotation='vertical', fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
     "with open(os.path.join(results_loc,'pca_results_hardness.pkl'),'wb') as fid:\n",
-    "    pickle.dump(var_dict,fid)"
+    "    pickle.dump(var_dict,fid)\n",
+    "with open(os.path.join(results_loc,'pca_results_hardness.json'),'w') as fid:\n",
+    "    json.dump(pca_dict,fid)"
    ]
   },
   {
@@ -457,6 +459,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_dict = {'rmse':baseline_rmse_list,'r':baseline_r_list}\n",
+    "with open(os.path.join(results_loc,'hea_hardness_baseline.json'),'w') as fid:\n",
+    "    json.dump(baseline_dict,fid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -465,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,8 +755,9 @@
     "        prediction_dict = temp_dict[ti]\n",
     "        for i,key in enumerate(methods):\n",
     "            a_score = np.array(list(prediction_dict[key]['rmse']))\n",
-    "            zero[i] = ttest_ind(a_score, baseline_rmse_list, alternative = 'less')[-1]\n",
+    "            zero[i] = ttest_ind(a_score, baseline_rmse_list, alternative = 'greater',equal_var =False)[-1]\n",
     "        p_value_dict[ti] = zero.tolist()\n",
+    "    \n",
     "    p_value_dict_sup[k]=p_value_dict"
    ]
   },
