--- a/notebooks/1c_transfer_learning_yield_strength.ipynb
+++ b/notebooks/1c_transfer_learning_yield_strength.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
     "fig, ax  = plt.subplots(1,3, sharey=True, sharex = False, figsize = (15,5))\n",
     "ax = ax.ravel()\n",
     "variance_levels = [0.90,0.95,0.99]\n",
-    "var_dict = {}\n",
+    "var_dict, pca_dict = {},{}\n",
     "for j,v in enumerate(variance_levels):\n",
     "    component_dict_var = {}\n",
     "    for i, method in enumerate(methods):\n",
@@ -139,14 +139,16 @@
     "        #ax[j].text(16, 0.8, f'{v*100}% cut-off', color = 'grey', fontsize=10)\n",
     "        ax[j].set_title(f'{v*100}% variance',y=1)\n",
     "        component_dict_var[method] = ind\n",
-    "        #pca_dict[method] = pca.explained_variance_ratio_.tolist()\n",
+    "        pca_dict[method] = pca.explained_variance_ratio_.tolist()\n",
     "    var_dict[v] = component_dict_var\n",
     "#fig.text(0.5, -0.04, 'number of components', ha='center', fontsize=14)\n",
     "#fig.text(-0.04, 0.5, 'cumulative explained variance', va='center', rotation='vertical', fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
     "with open(os.path.join(results_loc,'pca_results_ys.pkl'),'wb') as fid:\n",
-    "    pickle.dump(var_dict,fid)"
+    "    pickle.dump(var_dict,fid)\n",
+    "with open(os.path.join(results_loc,'pca_results_ys.json'),'w') as fid:\n",
+    "    json.dump(pca_dict,fid)"
    ]
   },
   {
@@ -451,7 +453,18 @@
     "baseline_rmse = np.mean(baseline_rmse_list)\n",
     "baseline_rmse_std = np.std(baseline_rmse_list)\n",
     "baseline_r = np.mean(baseline_r_list)\n",
-    "baseline_r_std = np.std(baseline_r_list)"
+    "baseline_r_std = np.std(baseline_r_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_dict = {'rmse':baseline_rmse_list,'r':baseline_r_list}\n",
+    "with open(os.path.join(results_loc,'hea_ys_baseline.json'),'w') as fid:\n",
+    "    json.dump(baseline_dict,fid)"
    ]
   },
   {
@@ -463,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,14 +707,57 @@
     "        prediction_dict = temp_dict[ti]\n",
     "        for i,key in enumerate(methods):\n",
     "            a_score = np.array(list(prediction_dict[key]['rmse']))\n",
-    "            zero[i] = ttest_ind(a_score, baseline_rmse_list, alternative = 'less')[-1]\n",
+    "            zero[i] = ttest_ind(a_score, baseline_rmse_list, alternative = 'greater',equal_var=False)[-1]\n",
     "        p_value_dict[ti] = zero.tolist()\n",
     "    p_value_dict_sup[k]=p_value_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.9: [0.9737809777505326,\n",
+       "  0.08502096599312582,\n",
+       "  0.8675928115598837,\n",
+       "  0.9369910471711878,\n",
+       "  0.9722184371447333,\n",
+       "  0.9445132322473812,\n",
+       "  0.9158182122065771,\n",
+       "  0.9364666220239832],\n",
+       " 0.95: [0.9737809777505327,\n",
+       "  0.4716474804886946,\n",
+       "  0.9639879790014597,\n",
+       "  0.935885538061434,\n",
+       "  0.9656243609125001,\n",
+       "  0.9424880660977426,\n",
+       "  0.9454662697526767,\n",
+       "  0.9685102705481681],\n",
+       " 0.99: [0.9737809777505326,\n",
+       "  0.972291902174135,\n",
+       "  0.966684450504977,\n",
+       "  0.9400879869250585,\n",
+       "  0.974743460719127,\n",
+       "  0.9527467332773673,\n",
+       "  0.9614555589041025,\n",
+       "  0.9840750579570696]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value_dict_sup['fixed_var']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
