--- a/notebooks/2b_generalizability_phase.ipynb
+++ b/notebooks/2b_generalizability_phase.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6dee0cf7c0>"
+       "<matplotlib.legend.Legend at 0x7f9da1f81c00>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6db8a35390>"
+       "<matplotlib.legend.Legend at 0x7f9d72a9c460>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -384,8 +384,8 @@
    "outputs": [],
    "source": [
     "results_dict = {\n",
-    "    'fixed_inds':fixed_inds,\n",
-    "    'fixed_var':fixed_var\n",
+    "    'fixed_inds': ind_dict,\n",
+    "    'fixed_var': var_dict\n",
     "}\n",
     "\n",
     "with open(os.path.join(results_loc,'random_subsampling_hea_phase.json'),'w') as fid:\n",
