--- a/notebooks/2c_generalizability_hardness.ipynb
+++ b/notebooks/2c_generalizability_hardness.ipynb
@@ -199,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ff8bd11f8e0>"
+       "<matplotlib.legend.Legend at 0x7f809d7d5810>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,16 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ff89f921990>"
+       "<matplotlib.legend.Legend at 0x7f8090863e80>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -379,8 +379,8 @@
    "outputs": [],
    "source": [
     "results_dict = {\n",
-    "    'fixed_inds':fixed_inds,\n",
-    "    'fixed_var':fixed_var\n",
+    "    'fixed_inds':ind_dict,\n",
+    "    'fixed_var':var_dict\n",
     "}\n",
     "\n",
     "with open(os.path.join(results_loc,'random_subsampling_hea_hardness.json'),'w') as fid:\n",
