--- a/notebooks/2d_generalizability_ys.ipynb
+++ b/notebooks/2d_generalizability_ys.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc9234088b0>"
+       "<matplotlib.legend.Legend at 0x7f3d0d05dd80>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,16 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc8f10ddb70>"
+       "<matplotlib.legend.Legend at 0x7f3cdb6be8f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -368,6 +368,7 @@
     "        if method != 'baseline':\n",
     "            style = '--'\n",
     "            alpha = 0.7\n",
+    "            \n",
     "        else:\n",
     "            style = '-'\n",
     "            alpha = 1\n",
@@ -386,8 +387,8 @@
    "outputs": [],
    "source": [
     "results_dict = {\n",
-    "    'fixed_inds':fixed_inds,\n",
-    "    'fixed_var':fixed_var\n",
+    "    'fixed_inds':ind_dict,\n",
+    "    'fixed_var':var_dict\n",
     "}\n",
     "\n",
     "with open(os.path.join(results_loc,'random_subsampling_hea_ys.json'),'w') as fid:\n",
