--- a/notebooks/1a_transfer_learning_phase.ipynb
+++ b/notebooks/1a_transfer_learning_phase.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,8 @@
     "    score.append(fold_micro_avg)\n",
     "baseline_score = pd.DataFrame(score,columns=['Precision','Recall','F1 Score','Support'])\n",
     "baseline = baseline_score['F1 Score'].mean()\n",
-    "baseline_std = baseline_score['F1 Score'].std()"
+    "baseline_std = baseline_score['F1 Score'].std()\n",
+    "baseline_score.to_csv(os.path.join(results_loc,'hea_phase_baseline.csv'))"
    ]
   },
   {
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +480,7 @@
     "        prediction_dict = temp_dict[ti]\n",
     "        for i,key in enumerate(methods):\n",
     "            a_score = np.array(list(prediction_dict[key]))\n",
-    "            zero[i] = ttest_ind(a_score, baseline_f1, alternative = 'less')[-1]\n",
+    "            zero[i] = ttest_ind(a_score, baseline_f1, alternative = 'less',equal_var = False)[-1]\n",
     "        p_value_dict[ti] = zero.tolist()\n",
     "    p_value_dict_sup[k]=p_value_dict"
    ]
